[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/map/TitleLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/nodes/NodeIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/nodes/NodeTemplate.gd" type="Script" id=3]
[ext_resource path="res://res/icons/icon_List.svg" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask;

void fragment(){
	 vec4 colour = texture(TEXTURE, UV);
    colour.a *= texture(mask, UV).a;

    COLOR = colour;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="NodeTemplate" type="MarginContainer"]
margin_left = -30.0
margin_top = -30.0
margin_right = 60.0
margin_bottom = 71.0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.61
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 90.0
margin_bottom = 101.0
custom_constants/separation = -9

[node name="NodeIcon" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_left = 15.0
margin_right = 75.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CustomTexture" parent="VBoxContainer/NodeIcon" index="0"]
material = SubResource( 2 )
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 1

[node name="NodeButton" parent="VBoxContainer/NodeIcon" index="1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 1
texture_normal = ExtResource( 4 )

[node name="TitleLabel" parent="VBoxContainer" instance=ExtResource( 1 )]
show_behind_parent = true
margin_top = 51.0
margin_right = 90.0
margin_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
size_flags_vertical = 0
custom_constants/line_spacing = -4
text = "NodeTemplate"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
margin_right = 90.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[connection signal="renamed" from="." to="." method="_on_NodeTemplate_renamed"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="VBoxContainer/NodeIcon"]
